--- a/css/carousel.css
+++ b/css/carousel.css
@@ -80,3 +80,11 @@
     margin-top: 7rem;
   }
 }
+.carousel-text{
+  
+  font-size: 20px;
+  text-align: center;
+  color: white;
+  font-weight: 600;
+
+}
