--- a/css/card.css
+++ b/css/card.css
@@ -7,7 +7,7 @@ body{
   overflow: visible;
   position: relative;
   width: 360px;
-  height: 400px;
+  height: 420px;
   background: #fff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
   bottom: 60px;
@@ -42,7 +42,7 @@ body{
   position: absolute;
   top: 10px;
   left: 10px;
-  bottom: 10px;
+  bottom: 15px;
   right: 10px;
   background: #222;
   transition: 0.5s;
@@ -58,18 +58,37 @@ body{
   width: 100%;
   height: 100%;
 }
+.card-image{
+  position: relative;
+  filter: blur(1px);
+}
+.image-text{
+  position: absolute;
 
+  -webkit-text-stroke: #222 0.1px;
+  -webkit-text-fill-color: #fff;
+  -webkit-text-fill-width:2px;
+  left: 30%;
+  top: 50%;
+ 
+color: whitesmoke;
+text-shadow: #222;
+font-size: 30px;
+ font-weight: 900;
+}
 /*Text*/
 .card-title {
   font-weight: 600;
   font-size: 20px;
   color: #777;
+  
+  bottom: 5px;
 }
 
 .card-caption {
   
   display: block;
-  margin-top: 5px;
+  margin-bottom: 5px;
 }
 #card-button{
   display: inline-block;
@@ -101,6 +120,7 @@ body{
 /*Hover*/
 .card:hover .card-imgbox {
   bottom: 80px;
+  
 }
 
 .card:hover:before {
@@ -110,4 +130,7 @@ body{
 .card:hover:after {
   transform: rotate(10deg);
   box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
+}
+.image-text:hover,.image-text:active{
+  opacity: 0;
 }
