--- a/css/card.css
+++ b/css/card.css
@@ -134,3 +134,117 @@ font-size: 30px;
 .image-text:hover,.image-text:active{
   opacity: 0;
 }
+/* ========================================================== */
+/* book popup */
+.btn-container{
+ margin-top: 30px;
+ margin-bottom: 0;
+  height: 100%;
+  width: 100%;
+  background-color: transparent;
+  position: relative;
+  
+}
+.popup-btn{
+position: absolute;
+padding: 10px 20px;
+border: #eb1a1a solid 2px;
+border-radius: 15px;
+background-color: #fff;
+color: #000;
+left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  
+}
+.bday-popup{
+  position: absolute;
+  
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  display: none;
+}
+.bday-popup-active{
+  display: block;
+  position: absolute;
+  
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+
+}
+.book {
+  position: relative;
+  border-radius: 10px;
+  width: 220px;
+  height: 300px;
+  background-color: rgb(250, 162, 162);
+  -webkit-box-shadow: 1px 1px 12px #000;
+  box-shadow: 1px 1px 12px #000;
+  -webkit-transform: preserve-3d;
+  -ms-transform: preserve-3d;
+  transform: preserve-3d;
+  -webkit-perspective: 2000px;
+  perspective: 2000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: #000;
+}
+
+.cover {
+  top: 0;
+  position: absolute;
+  background-color: rgb(255, 106, 106);
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform-origin: 0;
+  -ms-transform-origin: 0;
+  transform-origin: 0;
+  -webkit-box-shadow: 1px 1px 12px #000;
+  box-shadow: 1px 1px 12px #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.book:hover .cover {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform: rotatey(-90deg);
+  -ms-transform: rotatey(-90deg);
+  transform: rotatey(-90deg);
+}
+
+.book p {
+  font-size: 20px;
+  font-weight: bolder;
+  margin-left: 50px;
+  color: rgb(0, 0, 0);
+}
+.book button{
+  display: block;
+  position: absolute;
+  top: 0;
+  right:0;
+  background-color: #fff;
+  color: #000;
+  border-radius: 5px;
+}
