--- a/css/card.css
+++ b/css/card.css
@@ -137,31 +137,31 @@ font-size: 30px;
 /* ========================================================== */
 /* book popup */
 .btn-container{
- margin-top: 30px;
- margin-bottom: 0;
+ margin-top:0;
+ margin-bottom: 100px;
   height: 100%;
   width: 100%;
   background-color: transparent;
   position: relative;
-  
+  top: 0;
 }
 .popup-btn{
 position: absolute;
-padding: 10px 20px;
-border: #eb1a1a solid 2px;
+padding: 5px 10px;
+border: #eb1a1a solid 1px;
 border-radius: 15px;
 background-color: #fff;
 color: #000;
-left: 50%;
-  top: 50%;
+left: 20%;
+  top: 0%;
   transform: translate(-50%,-50%);
   
 }
 .bday-popup{
   position: absolute;
   
-  left: 50%;
-  top: 50%;
+  left: 20%;
+  top: 20%;
   transform: translate(-50%,-50%);
   display: none;
 }
@@ -170,7 +170,7 @@ left: 50%;
   position: absolute;
   
   left: 50%;
-  top: 50%;
+  top: 20%;
   transform: translate(-50%,-50%);
 
 }
